--- a/package.json
+++ b/package.json
@@ -15,5 +15,10 @@
   "bugs": {
     "url": "https://github.com/johnend/framer-glasgow/issues"
   },
-  "homepage": "https://github.com/johnend/framer-glasgow#readme"
+  "homepage": "https://github.com/johnend/framer-glasgow#readme",
+  "devDependencies": {
+    "browser-sync": "^2.14.0",
+    "gulp": "^3.9.1",
+    "gulp-sass": "^2.3.2"
+  }
 }
