--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   "devDependencies": {
     "browser-sync": "^2.14.0",
     "gulp": "^3.9.1",
+    "gulp-coffee": "^2.3.2",
     "gulp-sass": "^2.3.2"
   }
 }
