--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "gulp": "^3.9.1",
     "gulp-coffee": "^2.3.2",
     "gulp-cssnano": "^2.1.2",
+    "gulp-file-include": "^0.14.0",
     "gulp-if": "^2.0.1",
     "gulp-sass": "^2.3.2",
     "gulp-uglify": "^2.0.0",
