--- a/package.json
+++ b/package.json
@@ -28,5 +28,8 @@
     "gulp-uglify": "^2.0.0",
     "gulp-useref": "^3.1.0",
     "run-sequence": "^1.2.2"
+  },
+  "dependencies": {
+    "express": "^4.14.0"
   }
 }
